refactor: work around native image blocklists (2/2)
- String concatenation
- List methods
- Path
- FileTime/Instant
- ByteBuffer
- Annotations